Add weather section to index.html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What The Forecast?!!</title>
-    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="background-image">
+    <div id="background-image">
         <div id="button">
             <input type="text" class="search-bar" placeholder="Enter A Location...">
+        </div>
+        <div id="location">
+            <div id="city">Dublin, IRE</div>
+            <div id="day">Wednesday 04 August 2021</div>
+            <div id="time">17:59</div>
+        </div>
+        <div id="weather">
+            <div id="temperature">32<span>°c</span></div>
+            <div id="temp-range">24°c / 34°c</div>
+
         </div>
     </div>
 <script src="assets/js/script.js"></script>
