Add styling for Temperature and Temp-range

--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What The Forecast?!!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <div id="background-image">
+    <div id="background">
         <div id="button">
             <input type="text" class="search-bar" placeholder="Enter A Location...">
         </div>
-        <div id="location">
-            <div id="city">Dublin, IRE</div>
-            <div id="day">Wednesday 04 August 2021</div>
-            <div id="time">17:59</div>
-        </div>
-        <div id="weather">
-            <div id="temperature">32<span>°c</span></div>
-            <div id="temp-range">24°c / 34°c</div>
+        <div id="display-area">
+            <div id="location">
+                <div id="city">Dublin, IRE</div>
+                <div id="day">Wednesday 04 August 2021</div>
+                <div id="time">17:59</div>
+            </div>
+            <div id="weather">
+                <div class="icon" src=""></div>
+                <div id="temperature">32<span>°c</span></div>
+                <div id="temp-range">24°c / 34°c</div>
 
+            </div>
         </div>
     </div>
-<script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
