Add Searchbar function and event listener

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
         </div>
         <div id="display-area">
             <div id="location">
-                <div id="city">Dublin, IRE</div>
+                <div id="city">Dublin, IE</div>
                 <div id="day">Wednesday 04 August 2021</div>
-                <div id="time">17:59</div>
+                
             </div>
             <div id="weather">
                 <div class="icon" src=""></div>
                 <div id="temperature">32<span>°c</span></div>
                 <div id="temp-range">24°c / 34°c</div>
+                <div id="wind-speed">16kph</div>
 
             </div>
         </div>
