Add image div to index.html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                 
             </div>
             <div id="weather">
-                <div class="icon" src=""></div>
                 <div id="temperature">32<span>°c</span></div>
+                <div id="temp-icon">
+                    <img id="temp-icom-img"  src="assets/images/weather-images/sun.png" alt="Weather image icon">
+                </div>
+                <div id="forcast">Sunny</div>
                 <div id="temp-range">24°c / 34°c</div>
-                <div id="wind-speed">16kph</div>
+                
 
             </div>
         </div>
