--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="weather">
                 <div id="temperature">32<span>°c</span></div>
                 <div id="temp-icon">
-                    <img id="temp-icom-img"  src="assets/images/weather-images/sun.png" alt="Weather image icon">
+                    <img id="temp-icon-img"  src="assets/images/weather-images/sun.png" alt="Weather image icon">
                 </div>
                 <div id="forcast">Sunny</div>
                 <div id="temp-range">24°c / 34°c</div>
