Change to index.html placeholder text

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div id="display-area">
             <div id="location">
-                <div id="city">Dublin, IE</div>
-                <div id="day">Wednesday 04 August 2021</div>
+                <div id="city">What The Forecast?!!</div>
+                <div id="day">Hopefully it's friday !!</div>
                 
             </div>
             <div id="weather">
@@ -27,7 +27,7 @@
                 <div id="temp-icon">
                     <img id="temp-icon-img"  src="assets/images/weather-images/sun.png" alt="Weather image icon">
                 </div>
-                <div id="forcast">Sunny</div>
+                <div id="forcast">Always Sunny</div>
                 <div id="temp-range">24°c / 34°c</div>
                 
 
