--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
     <div id="background">
         <div id="button">
             <input type="text" class="search-bar" placeholder="Enter A Location...">
+
         </div>
+        <div id="not-found"></div>
         <div id="display-area">
             <div id="location">
                 <div id="city">What The Forecast?!!</div>
                 <div id="day">Hopefully it's friday !!</div>
-                
             </div>
             <div id="weather">
                 <div id="temperature">32<span>°c</span></div>
                 <div id="temp-icon">
-                    <img id="temp-icon-img"  src="assets/images/weather-images/sun.png" alt="Weather image icon">
+                    <img id="temp-icon-img" src="assets/images/weather-images/sun.png" alt="Weather image icon">
                 </div>
                 <div id="forcast">Always Sunny</div>
                 <div id="temp-range">24°c / 34°c</div>
-                
+
 
             </div>
         </div>
