Change to text in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="display-area">
             <div id="location">
                 <div id="city">What The Forecast?!!</div>
-                <div id="day">Hopefully it's friday !!</div>
+                <div id="day">Hopefully it's Sunny..!!</div>
             </div>
             <div id="weather">
                 <div id="temperature">32<span>°c</span></div>
